<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.agilemarket.ui.data.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_produto"
        android:name="com.example.agilemarket.ui.data.product.ProdutoFragment"
        android:label="@string/title_produto"
        tools:layout="@layout/fragment_produto" />

    <fragment
        android:id="@+id/navigation_listas"
        android:name="com.example.agilemarket.ui.data.listas.ListasFragment"
        android:label="@string/title_listas"
        tools:layout="@layout/fragment_listas" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.agilemarket.ui.data.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>